Handle HEAD requests
Add getters

Refactor socket creator to be instantiable

Use request getters

Refactor to be instantiable and remove unused methods

Add socket handler tests and add close streams method

Fix spacing

remove dupe

set java version for heroku

Refactor to be more clear things are not parsable

Refactor map used to build response codes

remove system propertes

fix typo

set java version for heroku

update readme and add test logging

Create html handler and refactor to be more functional

Refactor response class to use Builder pattern

Move path/routing out of HtmlHandler class

Fix html pages with new routes

Add controller

Fix html pages

Rename htmlHandler class to responseBody

--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>404 File Not Found</h1>
-    <a href="/todo.html">Go back to listings</a>
+    <a href="/todo">Go back to listings</a>
 </body>
 </html>
