--- a/public/todo.html
+++ b/public/todo.html
@@ -9,11 +9,7 @@
         <h1 class="title">My ToDos</h1>
         <section class="todo-list">
             <ul>
-                <li> Go to target </li>
-                <li> Wash makeup brushes </li>
-                <li> Read The Artist Way </li>
-                <li> Read Head First Java </li>
-                <li> Bank </li>
+                <li><a href="/todo/1" rel="item"> Go to target</a></li>
             </ul>
         </section>
     </main>
