--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Homepage</title>
     </head>
-
     <body>
-    <h1> Angie's ToDo App</h1>
-    <main>
-        <p>
-            <a href="/todo.html">All My ToDo Items</a>
-        </p>
-    </main>
+        <h1> Angie's ToDo App</h1>
+        <main>
+            <p>
+                <a href="/todo">All My ToDo Items</a>
+            </p>
+        </main>
     </body>
-
 </html>
