--- a/public/1.html
+++ b/public/1.html
@@ -7,7 +7,7 @@
 <body>
     <main>
         <h1 class="title">Details</h1>
-        <section>
+        <section class="listing-detail">
          <p>Todo #1</p>
         </section>
         <section>
