--- a/public/3.html
+++ b/public/3.html
@@ -6,18 +6,14 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Things to do:</h1>
+        <h1 class="title">Details Page</h1>
     </header>
     <main>
-        <section class="todo-list">
-            <ul>
-                <li><a href="/todo/1" rel="item"> Go to target</a></li>
-                <li><a href="/todo/2" rel="item"> Read a book</a></li>
-                <li><a href="/todo/3" rel="item"> Walk the dog</a></li>
-            </ul>
+        <section class="listing-detail">
+         <p>Todo #3</p>
         </section>
         <section>
-            <a href="/"> Back to home</a>
+          <a href="/todo" rel="collection">Back to Listings</a>
         </section>
     </main>
     <footer>
@@ -66,7 +62,6 @@
         flex-direction: column;
         flex: 1;
         font-size: 2rem;
-        justify-content: space-between;
     }
 
     footer {
