Styles are served from css files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
-    <link rel="stylesheet" type="text/css" href="/public/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/src/main/resources/index.css">
 </head>
     <body>
         <header>
@@ -19,30 +19,3 @@
         </footer>
     </body>
 </html>
-
-<style>
-    body {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        font-family: Courier New;
-        margin: 0;
-        min-height: 100vh;
-    }
-
-    main {
-        display: flex;
-        flex: 1;
-        align-items: center;
-        font-size: 2rem;
-    }
-
-    footer {
-        background-color: lightpink;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        height: 1.5rem;
-        align-items: center;
-    }
-</style>
